--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>main</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    
+    <main>
+
+        <section id="celphone">
+
+        </section>
+
+        <section id="social-media">
+
+        </section>
+    </main>
 </body>
 </html>
