finalmente foi essa porcaria de home

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
         <section id="celphone">
 
+            <iframe src="home.html" name="tela" id="tela" frameborder="0" scrolling="no"></iframe>
+
         </section>
 
         <section id="social-media">
